@@ -16,3 +16,20 @@ typedef struct {
 	guint32           rows [64];
 } metadata_t;
 
+enum {
+	MONO_MT_END,
+	MONO_MT_UINT32,
+	MONO_MT_UINT16,
+	MONO_MT_UINT8,
+	MONO_MT_BLOB_IDX,
+	MONO_MT_STRING_IDX,
+	MONO_MT_TABLE_IDX,
+	MONO_MT_GUID_IDX
+};
+
+typedef struct {
+	int   code;
+	char *def;
+} MonoMetaTable;
+
+const char *mono_meta_table_name (int table);
